fix z-index

--- a/client/src/components/Layout/Sidebar/Sidebar.scss
+++ b/client/src/components/Layout/Sidebar/Sidebar.scss
@@ -8,7 +8,7 @@
   transition: width 0.5s ease-in-out;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-  z-index: 1;
+  z-index: 2;
   ul {
     list-style: none;
     padding: 0;
